<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.LoginPhoneNumberFragment">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/login_subtitle"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_login_title"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login_subtitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_phone_country_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_fill_gray_left_radius_6dp"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_phone_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/notosans_regular"
                    android:gravity="center"
                    android:paddingStart="13dp"
                    android:text="@string/login_country_code"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="26dp"
                    android:background="@drawable/ic_arrow_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_phone_country_code"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_border_gray_right_radius_6dp"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center_vertical"
                android:hint="@string/login_hint"
                android:inputType="number"
                android:paddingStart="15dp"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cl_phone_country_code" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/selector_sign_up_button"
            android:fontFamily="@font/notosans_bold"
            android:gravity="center"
            android:text="@string/login_send"
            android:textColor="@color/selector_button_text"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>