<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="phoneNumber"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.LoginPhoneNumberCheckFragment">

        <TextView
            android:id="@+id/tv_login_check_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/login_check_title"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_check_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/login_check_subtitle"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_login_check_title"
            app:layout_constraintTop_toBottomOf="@id/tv_login_check_title" />

        <TextView
            android:id="@+id/tv_login_check_county_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/login_check_country_code"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_login_check_subtitle"
            app:layout_constraintTop_toBottomOf="@id/tv_login_check_subtitle" />

        <TextView
            android:id="@+id/tv_login_check_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/notosans_bold"
            android:text="@{phoneNumber}"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_login_check_county_code"
            app:layout_constraintTop_toTopOf="@id/tv_login_check_county_code"
            tools:text="12345678" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sms_code"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login_check_phone_number">

            <EditText
                android:id="@+id/tv_sms_code_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_phone_number_check"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:singleLine="true"
                android:textColor="#AC6767"
                app:layout_constraintEnd_toStartOf="@id/tv_sms_code_2"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="1" />

            <EditText
                android:id="@+id/tv_sms_code_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:background="@drawable/selector_phone_number_check"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:nextFocusRight="@id/tv_sms_code_3"
                android:singleLine="true"
                android:textColor="#AC6767"
                app:layout_constraintEnd_toStartOf="@id/tv_sms_code_3"
                app:layout_constraintStart_toEndOf="@id/tv_sms_code_1"
                tools:text="2" />

            <EditText
                android:id="@+id/tv_sms_code_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:background="@drawable/selector_phone_number_check"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:singleLine="true"
                android:textColor="#AC6767"
                app:layout_constraintEnd_toStartOf="@id/tv_sms_code_4"
                app:layout_constraintStart_toEndOf="@id/tv_sms_code_2"
                tools:text="3" />

            <EditText
                android:id="@+id/tv_sms_code_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:background="@drawable/selector_phone_number_check"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:singleLine="true"
                android:textColor="#AC6767"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_sms_code_3"
                tools:text="4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/login_check_not_receive"
            android:textColor="@color/main_red"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/cl_sms_code"
            app:layout_constraintTop_toBottomOf="@id/cl_sms_code" />


        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectangle_fill_red_radius_100dp"
            android:fontFamily="@font/notosans_bold"
            android:gravity="center"
            android:text="@string/login_check_confirm"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>